objects/acknowltng__AC_KnowledgeArticleSubscription__c.object
<CustomObject>
    <fields>
        <fullName>acknowltng__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acknowltng__CommunityId__c</fullName>
        <label>Community Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acknowltng__KnowledgeArticleId__c</fullName>
        <label>Knowledge Article Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acknowltng__KnowledgeArticleVersionId__c</fullName>
        <label>Knowledge Article Version Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acknowltng__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AC_KnowledgeArticleSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acknowltng__VersionNumber__c</fullName>
        <label>Version Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AC Knowledge Article Subscription</label>
    <listViews>
        <fullName>acknowltng__All</fullName>
        <columns>NAME</columns>
        <columns>acknowltng__KnowledgeArticleId__c</columns>
        <columns>acknowltng__User__c</columns>
        <columns>acknowltng__CommunityId__c</columns>
        <columns>acknowltng__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KAS-{00000}</displayFormat>
        <label>AC Knowledge Article Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AC Knowledge Article Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>